# cobol-bridge-mcp

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  acp.json  glama.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
